# linear-claude

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh  linear_claude.sh  linear_claude.sh.sha256
.claude/: settings.json
.github/workflows/: release.yml
src/: claude.rs  cli.rs  config.rs  duration.rs  git.rs  iteration.rs  main.rs  prompt.rs  summary.rs  update.rs  version.rs
src/github/: client.rs  types.rs
src/linear/: client.rs  types.rs
src/pty/: header.rs  relay.rs
src/tui/: app.rs  claude_runner.rs  event.rs  mod.rs  ui.rs
