[package]
name = "linear-claude"
version = "0.1.1"
edition = "2021"
description = "Run Claude Code iteratively on Linear issues"
license = "MIT"

[[bin]]
name = "linear-claude"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
signal-hook = "0.3"
crossterm = "0.28"
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
sha2 = "0.10"
hex = "0.4"
dotenvy = "0.15"
dirs = "6"
base64 = "0.22"
toml = "0.8"
regex = "1"
portable-pty = "0.8"
vt100 = "0.15"
tui-term = "0.2"

[dev-dependencies]

[profile.release]
strip = true
lto = true
